--- a/web/templates/peticion/list.html
+++ b/web/templates/peticion/list.html
@@ -20,9 +20,15 @@
               -o-background-size: cover;
               background-size: cover;
          }
+         .home{
+             left:5%;
+             top:5%;
+             position:fixed;
+         }
 
         .container{
             width : 50%;
+            text-align:center;
          }
 
 
@@ -157,18 +163,38 @@
             margin-left : 30px;
         }
 
+ul {
+    list-style-type: none;
+    padding:0;
+    overflow: hidden;
+    background : #0b4c46;
 
+}
 
-        .busqueda
+li {
+    float: left;
+    height:100%;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding:8px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: white;
+    color:#0b4c46;
+}
          </style>
     </head>
 <body>
 
+           <a class="home" href="/" role="button"><img src="https://i.imgur.com/rQNSiWf.png" height="23%" width="23%"></a>
   <div class="container">
     <!-- SU CONTENIDO VA AQUÍ -->
-                   <a class="btn btn-primary" href="/" role="button">Volver</a>
-
-
 
     <div class="busqueda">
     <form action="{% url 'web:peticionFiltrar' %}" method="post">
@@ -194,30 +220,32 @@
               <a class="btn btn-default" href="{% url 'web:peticionEditar' pk=peticion.pk %}"><span class="glyphicon glyphicon-pencil">Editar</span></a>
           </div>
       {% endfor %}
-  </div>
 
-  {% if peticiones.has_next or peticiones.has_previous %}
+      {% if peticiones.has_next or peticiones.has_previous %}
 
+<br>
 
     <ul class="pagination">
         {% if peticiones.has_previous %}
-            <li><a href="?page={{ peticiones.previous_page_number }}" class="btn btnpages"><i
-                    class="glyphicon glyphicon-chevron-left"></i></a></li>
+            <li><a href="?page={{ peticiones.previous_page_number }}" class="pages"><i class="material-icons">keyboard_arrow_left</i></a></li>
         {% endif %}
         {% for page in peticiones.paginator.page_range %}
             <li class="{% if items.number == page %}active{% endif %}">
-                <a class="btn btnpages" href="?page={{ page }}">{{ page }}</a></li>
+                <a class="pages" href="?page={{ page }}">{{ page }}</a></li>
         {% endfor %}
 
         {% if peticiones.has_next %}
             <li>
-                <a href="?page={{ peticiones.next_page_number }}" class="btn btnpages">
-                    <i class="glyphicon glyphicon-chevron-right"></i>
+                <a href="?page={{ peticiones.next_page_number }}" class="pages">
+                    <i class="material-icons">keyboard_arrow_right</i>
                 </a>
             </li>
         {% endif %}
     </ul>
     {% endif %}
+  </div>
+
+
 
   <!-- JavaScript: placed at the end of the document so the pages load faster -->
   <!-- jQuery library -->
