--- a/web/templates/recibo/list.html
+++ b/web/templates/recibo/list.html
@@ -9,6 +9,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <style>
 
          body{
@@ -20,12 +21,18 @@
               background-size: cover;
          }
 
+        .home{
+             left:5%;
+             top:5%;
+             position:fixed;
+         }
         .header {
             padding-top: 15px;
         }
 
         .container{
             width : 40%;
+            text-align:center;
          }
 
 
@@ -114,15 +121,40 @@
             text-align:center;
             padding-bottom:30px;
         }
+
+        ul {
+    list-style-type: none;
+    padding:0;
+    overflow: hidden;
+    background : black;
+
+    }
+
+    li {
+        float: left;
+        height:100%;
+    }
+
+    li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding:8px;
+        text-decoration: none;
+    }
+
+    li a:hover {
+        background-color: white;
+        color:black;
+    }
          </style>
 </head>
 <body>
-
+           <a class="home" href="/" role="button"><img src="https://i.imgur.com/rQNSiWf.png" height="23%" width="23%"></a>
 
 
   <div class="container">
     <!-- SU CONTENIDO VA AQUÍ -->
-               <a class="btn btn-primary" href="/" role="button">Volver</a>
 
 
       {% for item in items %}
@@ -132,30 +164,31 @@
               <a class="btn btn-default" href="{% url 'web:envioDescargar' path=item.pdf %}"><span class="glyphicon glyphicon-pencil">Descargar</span></a>
           </div>
       {% endfor %}
-  </div>
 
-  {% if items.has_next or items.has_previous %}
+      {% if items.has_next or items.has_previous %}
 
 
     <ul class="pagination">
         {% if items.has_previous %}
-            <li><a href="?page={{ items.previous_page_number }}" class="btn btnpages"><i
-                    class="glyphicon glyphicon-chevron-left"></i></a></li>
+            <li><a href="?page={{ items.previous_page_number }}" class="pages"><i class="material-icons">keyboard_arrow_left</i></a></li>
         {% endif %}
         {% for page in items.paginator.page_range %}
             <li class="{% if items.number == page %}active{% endif %}">
-                <a class="btn btnpages" href="?page={{ page }}">{{ page }}</a></li>
+                <a class="pages" href="?page={{ page }}">{{ page }}</a></li>
         {% endfor %}
 
         {% if items.has_next %}
             <li>
-                <a href="?page={{ items.next_page_number }}" class="btn btnpages">
-                    <i class="glyphicon glyphicon-chevron-right"></i>
+                <a href="?page={{ items.next_page_number }}" class="pages">
+                    <i class="material-icons">keyboard_arrow_right</i>
                 </a>
             </li>
         {% endif %}
     </ul>
     {% endif %}
+  </div>
+
+
 
   <!-- JavaScript: placed at the end of the document so the pages load faster -->
   <!-- jQuery library -->
