--- a/web/templates/usuario/edit.html
+++ b/web/templates/usuario/edit.html
@@ -27,12 +27,17 @@
             margin: .5em 0 10px 0;
             text-align: center;
         }
+        .home{
+             left:5%;
+             top:5%;
+             position:fixed;
+         }
 
         .header {
             padding-top: 15px;
         }
 
-        img {
+        .container img {
             width : 35%;
             height : 35%;
             margin-bottom : 20px;
@@ -119,8 +124,8 @@
   </head>
   <body>
 
+           <a class="home" href="/" role="button"><img src="https://i.imgur.com/rQNSiWf.png" height="23%" width="23%"></a>
     <div class="container">
-        <a class="btn btn-primary" href="/" role="button">Volver</a>
 
         <img src="https://i.imgur.com/pUsbfby.jpg">
 
