--- a/web/templates/aviso/edit.html
+++ b/web/templates/aviso/edit.html
@@ -20,6 +20,12 @@
               background-size: cover;
          }
 
+        .home{
+             left:5%;
+             top:5%;
+             position:fixed;
+         }
+
          label{
             display: block;
             margin: .5em 0 10px 0;
@@ -30,7 +36,7 @@
             padding-top: 15px;
         }
 
-        img {
+        .container img {
             width : 35%;
             height : 35%;
             margin-bottom : 20px;
@@ -140,8 +146,8 @@
          </style>
        </head>
        <body>
+           <a class="home" href="/" role="button"><img src="https://i.imgur.com/rQNSiWf.png" height="23%" width="23%"></a>
      <div class="container">
-                         <a class="btn btn-primary" href="/" role="button">Volver</a>
 
 
      <div class="formulario">
