--- a/web/templates/peticion/edit.html
+++ b/web/templates/peticion/edit.html
@@ -28,6 +28,12 @@
             text-align: center;
         }
 
+        .home{
+             left:5%;
+             top:5%;
+             position:fixed;
+         }
+
         .header {
             padding-top: 15px;
         }
@@ -152,11 +158,10 @@
          </style>
   </head>
   <body>
+           <a class="home" href="/" role="button"><img src="https://i.imgur.com/rQNSiWf.png" height="23%" width="23%"></a>
 
     <div class="container">
       <!-- SU CONTENIDO VA AQUÍ -->
-                      <a class="btn btn-primary" href="/" role="button">Volver</a>
-
 
     <div class="formulario">
       <form method="POST" class="peticion-form">{% csrf_token %}
