--- a/web/templates/recibo/edit.html
+++ b/web/templates/recibo/edit.html
@@ -28,6 +28,12 @@
             margin: .5em 0 10px 0;
         }
 
+        .home{
+             left:5%;
+             top:5%;
+             position:fixed;
+         }
+
         .header {
             padding-top: 15px;
         }
@@ -156,9 +162,9 @@
 
   <body>
 
+           <a class="home" href="/" role="button"><img src="https://i.imgur.com/rQNSiWf.png" height="23%" width="23%"></a>
     <div class="container">
       <!-- SU CONTENIDO VA AQUÍ -->
-                <a class="btn btn-primary" href="/" role="button">Volver</a>
 
 
       <div class="formulario">
