--- a/web/templates/usuario/mail.html
+++ b/web/templates/usuario/mail.html
@@ -30,7 +30,13 @@
             padding-top: 15px;
         }
 
-        img {
+        .home{
+             left:5%;
+             top:5%;
+             position:fixed;
+         }
+
+        .container img {
             width : 35%;
             height : 35%;
             margin-bottom : 20px;
@@ -141,8 +147,9 @@
          </style>
        </head>
        <body>
+
+          <a class="home" href="/" role="button"><img src="https://i.imgur.com/rQNSiWf.png" height="23%" width="23%"></a>
     <div class="container">
-        <a class="btn btn-primary" href="http://ardbud.pythonanywhere.com/web/index/usuario/list" role="button">Volver</a>
         <div class="formulario">
             <form method="POST" class="mail-form">{% csrf_token %}
               {{ form.as_p }}
